chore: 템플릿엔진(mustache) 추가

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group 'com.solarsdev.springboot-practice'
 version '1.0-SNAPSHOT'
-sourceCompatibility = 1.8
+//sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -29,5 +29,6 @@ dependencies {
     implementation('org.projectlombok:lombok')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
