--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation('com.h2database:h2')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
